Use URI over URL
git-svn-id: https://svn.apache.org/repos/asf/tuscany/java/sca@825179 13f79535-47bb-0310-9956-ffa450edef68